Anonymous | Login | 2021-01-18 08:23 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0031190 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2019-11-25 09:53 | 2020-09-15 12:59 | ||||||||
Reporter | abv | ||||||||||||
Assigned To | msv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | new | Resolution | open | ||||||||||
Platform | OS | OS Version | |||||||||||
Product Version | |||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0031190: Modeling Algorithms - progress indication in GeomPlate is inconsistent | ||||||||||||
Description | Progress indicator introduced in GeomPlate_BuildPlateSurface within 0029719 does not get incremented consistently within that class: the only place where it gets incremented is math_Gauss, however the latter can be called several times, and this is not taken into account in progress indication (first call will eat whole progress range). The code needs to be reviwed to ensure that progress is incremented consistently. The test case is needed indeed. | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | |||||||||||||
Attached Files | |||||||||||||
![]() |
|||||||||||||
|
![]() |
|
(0094825) msv (developer) 2020-09-15 12:59 |
The patch for 0025748 improves this behavior and now progress scale is correctly divided on different calls to math_Gauss (see the classes GeomPlate_BuildPlateSurface and Plate_Plate). So, it is needed just to create some meaningful test case. |
![]() |
|||
Date Modified | Username | Field | Change |
2019-11-25 09:53 | abv | New Issue | |
2019-11-25 09:53 | abv | Assigned To | => msv |
2019-11-25 09:53 | abv | Relationship added | child of 0029719 |
2019-11-25 09:54 | abv | Relationship added | related to 0025748 |
2020-09-15 12:49 | msv | Summary | Modeling - progress indication in GeomPlate is inconsistent => Modeling Algorithms - progress indication in GeomPlate is inconsistent |
2020-09-15 12:59 | msv | Note Added: 0094825 | |
2020-09-15 12:59 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |